# Extension-Manager

./: README.md  io.github.leolost2605.extension-manager.yml  meson.build
.github/workflows/: ci.yml
data/: io.github.leolost2605.extension-manager.appdata.xml.in  io.github.leolost2605.extension-manager.desktop.in  io.github.leolost2605.extension-manager.metainfo.xml.in  known-extensions  main.vala  meson.build
po/: POTFILES
src/: Application.vala  CategoryRow.vala  ExtensionPage.vala  ExtensionRow.vala  WelcomeView.vala  Window.vala
src/Core/: Extension.vala  ExtensionManager.vala
